Revision history for {{$dist->name}}

{{$NEXT}}
  [Documentation]
  - Fixed typo in POD markup.

  - Bumped copyright year.

  [Enhancements]
  - Added vsz as alias for size. (vss is actually a typo.)

  - Used proper aliases instead of wrapper methods.

0.0201    2015-01-05 18:19:39+00:00 Europe/London
  [Other Changes]
  - Test prerequisties are explicitly in the test phase.

0.0200    2015-01-05 15:36:32+00:00 Europe/London
  [Enhancements]
  - Added vss and rss as aliases for size and resident.

0.0100    2015-01-05 12:18:43+00:00 Europe/London
  - Initial prototype.